Update invoking method.